2006-10-31  Michael Natterer  <mitch@gimp.org>

	* configure.in: add -Wmissing-declarations and -Wmissing-prototypes
	to CFLAGS if the compiler supports them. Still warns in some files
	but most stuff compiles cleanly after all the cleanups below.

2006-10-31  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/app.pl: declare all register_foo_procs() functions
	in internal_procs.h instead of internal_procs.c and include
	internal_procs.h from all foo_cmds.c files.

	* app/pdb/*_cmds.c
	* app/pdb/internal_procs.[ch]: regenerated.

2006-10-31  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/lib.pl: if a generated file in libgimp contains
	deprecated procedures, #undef GIMP_DISABLE_DEPRECATED and include
	its header explicitly, to make sure all deprecated procedures are
	declared properly. Removed $privatevars cruft.

	* libgimp/gimpbrushes_pdb.c
	* libgimp/gimpcolor_pdb.c
	* libgimp/gimpdrawable_pdb.c
	* libgimp/gimpgradients_pdb.c
	* libgimp/gimppalettes_pdb.c
	* libgimp/gimppaths_pdb.c
	* libgimp/gimppatterns_pdb.c
	* libgimp/gimptexttool_pdb.c
	* libgimp/gimptransformtools_pdb.c: regenerated.

2006-10-31  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/plug-ins/py-slice.py: string fixes.

2006-10-31  Michael Natterer  <mitch@gimp.org>

	* tools/pdbgen/pdb/gradient.pdb: made private functions static.

	* app/pdb/gradient_cmds.c: regenerated.

2006-10-31  Michael Natterer  <mitch@gimp.org>

	* plug-ins/faxg3/Makefile.am
	* plug-ins/faxg3/run_tbl.c: removed this file. Apparently it
	was never needed.

2006-10-31  Simon Budig  <simon@gimp.org>

	* tools/defcheck.py: hack to check the consistency of the .def files
	for the libraries. Invoke after building GIMP, needs "nm" to work.

	* libgimpwidgets/gimpwidgets.def: removed obsolete symbol.

2006-10-31  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c: made
	gimp_display_shell_ruler_button_press() static.

2006-10-31  Simon Budig  <simon@gimp.org>
