@@ -1,148 +1,148 @@
 %plugins = (
-    'AlienMap2' => { libdep => 'gtk', ui => 1 },
-    'CEL' => { libdep => 'gtk', ui => 1 },
-    'CML_explorer' => { libdep => 'gtk', ui => 1 },
-    'aa' => { libdep => 'gtk', ui => 1, optional => 1 },
-    'align_layers' => { libdep => 'gtk', ui => 1 },
-    'animationplay' => { libdep => 'gtk', ui => 1 },
-    'animoptimize' => { libdep => 'glib' },
-    'antialias' => { libdep => 'glib' },
-    'apply_lens' => { libdep => 'gtk', ui => 1 },
-    'autocrop' => { libdep => 'glib' },
-    'autostretch_hsv' => { libdep => 'glib' },
-    'blinds' => { libdep => 'gtk', ui => 1 },
-    'blur' => { libdep => 'glib' },
-    'borderaverage' => { libdep => 'gtk', ui => 1 },
-    'bumpmap' => { libdep => 'gtk', ui => 1 },
-    'c_astretch' => { libdep => 'glib' },
-    'cartoon' => { libdep => 'gtk', ui => 1 },
-    'ccanalyze' => { libdep => 'gtk', ui => 1 },
-    'channel_mixer' => { libdep => 'gtk', ui => 1 },
-    'checkerboard' => { libdep => 'gtk', ui => 1 },
-    'color_enhance' => { libdep => 'gtk', ui => 1 },
-    'colorify' => { libdep => 'gtk', ui => 1 },
-    'colormap-remap' => { libdep => 'gtk', ui => 1 },
-    'colortoalpha' => { libdep => 'gtk', ui => 1 },
-    'compose' => { libdep => 'gtk', ui => 1 },
-    'compressor' => { libdep => 'glib' },
-    'convmatrix' => { libdep => 'gtk', ui => 1 },
-    'csource' => { libdep => 'gtk', ui => 1 },
-    'cubism' => { libdep => 'gtk', ui => 1 },
-    'curve_bend' => { libdep => 'gtk', ui => 1 },
-    'decompose' => { libdep => 'gtk', ui => 1 },
-    'deinterlace' => { libdep => 'gtk', ui => 1 },
-    'depthmerge' => { libdep => 'gtk', ui => 1 },
-    'desktop-link' => { libdep => 'glib' },
-    'despeckle' => { libdep => 'gtk', ui => 1 },
-    'destripe' => { libdep => 'gtk', ui => 1 },
-    'dicom' => { libdep => 'gtk', ui => 1 },
-    'diffraction' => { libdep => 'gtk', ui => 1 },
-    'displace' => { libdep => 'gtk', ui => 1 },
-    'dog' => { libdep => 'gtk', ui => 1 },
-    'edge' => { libdep => 'gtk', ui => 1 },
-    'emboss' => { libdep => 'gtk', ui => 1 },
-    'engrave' => { libdep => 'gtk', ui => 1 },
-    'exchange' => { libdep => 'gtk', ui => 1 },
-    'film' => { libdep => 'gtk', ui => 1 },
-    'flarefx' => { libdep => 'gtk', ui => 1 },
-    'fp' => { libdep => 'gtk', ui => 1 },
-    'fractaltrace' => { libdep => 'gtk', ui => 1 },
-    'gauss' => { libdep => 'gtk', ui => 1 },
-    'gbr' => { libdep => 'gtk', ui => 1 },
-    'gee' => { libdep => 'gtk', ui => 1 },
-    'gee_zoom' => { libdep => 'gtk', ui => 1 },
-    'gif' => { libdep => 'gtk', ui => 1 },
-    'gifload' => { libdep => 'glib' },
-    'gih' => { libdep => 'gtk', ui => 1 },
-    'glasstile' => { libdep => 'gtk', ui => 1 },
-    'glob' => { libdep => 'glib' },
-    'gqbist' => { libdep => 'gtk', ui => 1 },
-    'gradmap' => { libdep => 'glib', ui => 1 },
-    'grid' => { libdep => 'gtk', ui => 1 },
-    'gtm' => { libdep => 'gtk', ui => 1 },
-    'guillotine' => { libdep => 'glib' },
-    'header' => { libdep => 'gtk', ui => 1 },
-    'hot' => { libdep => 'gtk', ui => 1 },
-    'illusion' => { libdep => 'gtk', ui => 1 },
-    'iwarp' => { libdep => 'gtk', ui => 1 },
-    'jigsaw' => { libdep => 'gtk', ui => 1 },
-    'laplace' => { libdep => 'glib', ui => 1 },
-    'lcms' => { libdep => 'glib', optional => 1 },
-    'lens' => { libdep => 'gtk', ui => 1 },
-    'lic' => { libdep => 'gtk', ui => 1 },
-    'mail' => { libdep => 'gtk', ui => 1, optional => 1 },
-    'mapcolor' => { libdep => 'gtk', ui => 1 },
-    'max_rgb' => { libdep => 'gtk', ui => 1 },
-    'mblur' => { libdep => 'gtk', ui => 1 },
-    'mng' => { libdep => 'gtk', ui => 1, optional => 1 },
-    'mosaic' => { libdep => 'gtk', ui => 1 },
-    'neon' => { libdep => 'gtk', ui => 1 },
-    'newsprint' => { libdep => 'gtk', ui => 1 },
-    'nlfilt' => { libdep => 'gtk', ui => 1 },
-    'noisify' => { libdep => 'gtk', ui => 1 },
-    'normalize' => { libdep => 'glib' },
-    'nova' => { libdep => 'gtk', ui => 1 },
-    'oilify' => { libdep => 'gtk', ui => 1 },
-    'papertile' => { libdep => 'gtk', ui => 1 },
-    'pat' => { libdep => 'gtk', ui => 1 },
-    'pcx' => { libdep => 'gtk', ui => 1 },
-    'photocopy' => { libdep => 'gtk', ui => 1 },
-    'pix' => { libdep => 'gtk', ui => 1 },
-    'pixelize' => { libdep => 'gtk', ui => 1 },
-    'plasma' => { libdep => 'gtk', ui => 1 },
-    'plugin-browser' => { libdep => 'gtk', ui => 1 },
-    'png' => { libdep => 'gtk', ui => 1, optional => 1, cflags => 1 },
-    'pnm' => { libdep => 'gtk', ui => 1 },
-    'polar' => { libdep => 'gtk', ui => 1 },
-    'poppler' => { libdep => 'gtk', ui => 1, optional => 1, cflags => 1 },
-    'postscript' => { libdep => 'gtk', ui => 1 },
-    'procedure-browser' => { libdep => 'gtk', ui => 1 },
-    'psd' => { libdep => 'glib' },
-    'psd_save' => { libdep => 'gtk', ui => 1 },
-    'psp' => { libdep => 'gtk', ui => 1, optional => 1, libopt => 'z' },
-    'randomize' => { libdep => 'gtk', ui => 1 },
-    'raw' => { libdep => 'gtk', ui => 1 },
-    'redeye' => { libdep => 'gtk', ui => 1 },
-    'retinex' => { libdep => 'gtk', ui => 1 },
-    'ripple' => { libdep => 'gtk', ui => 1 },
-    'rotate' => { libdep => 'glib' },
-    'sample_colorize' => { libdep => 'gtk', ui => 1 },
-    'scatter_hsv' => { libdep => 'gtk', ui => 1 },
-    'screenshot' => { libdep => 'gtk', ui => 1, optional => 1 },
-    'sel_gauss' => { libdep => 'gtk', ui => 1, cflags => 'MMX_EXTRA_CFLAGS' },
-    'semiflatten' => { libdep => 'glib' },
-    'sharpen' => { libdep => 'gtk', ui => 1 },
-    'shift' => { libdep => 'gtk', ui => 1 },
-    'sinus' => { libdep => 'gtk', ui => 1 },
-    'smooth_palette' => { libdep => 'gtk', ui => 1 },
-    'snoise' => { libdep => 'gtk', ui => 1 },
-    'sobel' => { libdep => 'gtk', ui => 1 },
-    'softglow' => { libdep => 'gtk', ui => 1 },
-    'sparkle' => { libdep => 'gtk', ui => 1 },
-    'spheredesigner' => { libdep => 'gtk', ui => 1 },
-    'spread' => { libdep => 'gtk', ui => 1 },
-    'struc' => { libdep => 'gtk', ui => 1 },
-    'sunras' => { libdep => 'gtk', ui => 1 },
-    'svg' => { libdep => 'gtk', ui => 1, optional => 1, cflags => 1 },
-    'tga' => { libdep => 'gtk', ui => 1 },
-    'threshold_alpha' => { libdep => 'gtk', ui => 1 },
-    'tiff' => { libdep => 'gtk', ui => 1, optional => 1 },
-    'tile' => { libdep => 'gtk', ui => 1 },
-    'tileit' => { libdep => 'gtk', ui => 1 },
-    'tiler' => { libdep => 'glib' },
-    'uniteditor' => { libdep => 'gtk', ui => 1 },
-    'unsharp' => { libdep => 'gtk', ui => 1 },
-    'video' => { libdep => 'gtk', ui => 1 },
-    'vinvert' => { libdep => 'glib' },
-    'vpropagate' => { libdep => 'gtk', ui => 1 },
-    'warp' => { libdep => 'gtk', ui => 1 },
-    'waves' => { libdep => 'gtk', ui => 1 },
-    'webbrowser' => { libdep => 'glib' },
-    'whirlpinch' => { libdep => 'gtk', ui => 1 },
-    'wind' => { libdep => 'gtk', ui => 1 },
-    'wmf' => { libdep => 'gtk', ui => 1, optional => 1, cflags => 1 },
-    'xbm' => { libdep => 'gtk', ui => 1 },
-    'xpm' => { libdep => 'gtk', ui => 1, optional => 1 },
-    'xwd' => { libdep => 'gtk', ui => 1 },
-    'zealouscrop' => { libdep => 'glib' }
+    'AlienMap2' => { ui => 1 },
+    'CEL' => { ui => 1 },
+    'CML_explorer' => { ui => 1 },
+    'aa' => { ui => 1, optional => 1 },
+    'align_layers' => { ui => 1 },
+    'animationplay' => { ui => 1 },
+    'animoptimize' => {},
+    'antialias' => {},
+    'apply_lens' => { ui => 1 },
+    'autocrop' => {},
+    'autostretch_hsv' => {},
+    'blinds' => { ui => 1 },
+    'blur' => {},
+    'borderaverage' => { ui => 1 },
+    'bumpmap' => { ui => 1 },
+    'c_astretch' => {},
+    'cartoon' => { ui => 1 },
+    'ccanalyze' => { ui => 1 },
+    'channel_mixer' => { ui => 1 },
+    'checkerboard' => { ui => 1 },
+    'color_enhance' => { ui => 1 },
+    'colorify' => { ui => 1 },
+    'colormap-remap' => { ui => 1 },
+    'colortoalpha' => { ui => 1 },
+    'compose' => { ui => 1 },
+    'compressor' => {},
+    'convmatrix' => { ui => 1 },
+    'csource' => { ui => 1 },
+    'cubism' => { ui => 1 },
+    'curve_bend' => { ui => 1 },
+    'decompose' => { ui => 1 },
+    'deinterlace' => { ui => 1 },
+    'depthmerge' => { ui => 1 },
+    'desktop-link' => {},
+    'despeckle' => { ui => 1 },
+    'destripe' => { ui => 1 },
+    'dicom' => { ui => 1 },
+    'diffraction' => { ui => 1 },
+    'displace' => { ui => 1 },
+    'dog' => { ui => 1 },
+    'edge' => { ui => 1 },
+    'emboss' => { ui => 1 },
+    'engrave' => { ui => 1 },
+    'exchange' => { ui => 1 },
+    'film' => { ui => 1 },
+    'flarefx' => { ui => 1 },
+    'fp' => { ui => 1 },
+    'fractaltrace' => { ui => 1 },
+    'gauss' => { ui => 1 },
+    'gbr' => { ui => 1 },
+    'gee' => { ui => 1 },
+    'gee_zoom' => { ui => 1 },
+    'gif' => { ui => 1 },
+    'gifload' => {},
+    'gih' => { ui => 1 },
+    'glasstile' => { ui => 1 },
+    'glob' => {},
+    'gqbist' => { ui => 1 },
+    'gradmap' => {},
+    'grid' => { ui => 1 },
+    'gtm' => { ui => 1 },
+    'guillotine' => {},
+    'header' => { ui => 1 },
+    'hot' => { ui => 1 },
+    'illusion' => { ui => 1 },
+    'iwarp' => { ui => 1 },
+    'jigsaw' => { ui => 1 },
+    'laplace' => {},
+    'lcms' => { optional => 1 },
+    'lens' => { ui => 1 },
+    'lic' => { ui => 1 },
+    'mail' => { ui => 1, optional => 1 },
+    'mapcolor' => { ui => 1 },
+    'max_rgb' => { ui => 1 },
+    'mblur' => { ui => 1 },
+    'mng' => { ui => 1, optional => 1 },
+    'mosaic' => { ui => 1 },
+    'neon' => { ui => 1 },
+    'newsprint' => { ui => 1 },
+    'nlfilt' => { ui => 1 },
+    'noisify' => { ui => 1 },
+    'normalize' => {},
+    'nova' => { ui => 1 },
+    'oilify' => { ui => 1 },
+    'papertile' => { ui => 1 },
+    'pat' => { ui => 1 },
+    'pcx' => { ui => 1 },
+    'photocopy' => { ui => 1 },
+    'pix' => { ui => 1 },
+    'pixelize' => { ui => 1 },
+    'plasma' => { ui => 1 },
+    'plugin-browser' => { ui => 1 },
+    'png' => { ui => 1, optional => 1, cflags => 1 },
+    'pnm' => { ui => 1 },
+    'polar' => { ui => 1 },
+    'poppler' => { ui => 1, optional => 1, cflags => 1 },
+    'postscript' => { ui => 1 },
+    'procedure-browser' => { ui => 1 },
+    'psd' => {},
+    'psd_save' => { ui => 1 },
+    'psp' => { ui => 1, optional => 1, libopt => 'z' },
+    'randomize' => { ui => 1 },
+    'raw' => { ui => 1 },
+    'redeye' => { ui => 1 },
+    'retinex' => { ui => 1 },
+    'ripple' => { ui => 1 },
+    'rotate' => {},
+    'sample_colorize' => { ui => 1 },
+    'scatter_hsv' => { ui => 1 },
+    'screenshot' => { ui => 1, optional => 1 },
+    'sel_gauss' => { ui => 1, cflags => 'MMX_EXTRA_CFLAGS' },
+    'semiflatten' => {},
+    'sharpen' => { ui => 1 },
+    'shift' => { ui => 1 },
+    'sinus' => { ui => 1 },
+    'smooth_palette' => { ui => 1 },
+    'snoise' => { ui => 1 },
+    'sobel' => { ui => 1 },
+    'softglow' => { ui => 1 },
+    'sparkle' => { ui => 1 },
+    'spheredesigner' => { ui => 1 },
+    'spread' => { ui => 1 },
+    'struc' => { ui => 1 },
+    'sunras' => { ui => 1 },
+    'svg' => { ui => 1, optional => 1, cflags => 1 },
+    'tga' => { ui => 1 },
+    'threshold_alpha' => { ui => 1 },
+    'tiff' => { ui => 1, optional => 1 },
+    'tile' => { ui => 1 },
+    'tileit' => { ui => 1 },
+    'tiler' => {},
+    'uniteditor' => { ui => 1 },
+    'unsharp' => { ui => 1 },
+    'video' => { ui => 1 },
+    'vinvert' => {},
+    'vpropagate' => { ui => 1 },
+    'warp' => { ui => 1 },
+    'waves' => { ui => 1 },
+    'webbrowser' => {},
+    'whirlpinch' => { ui => 1 },
+    'wind' => { ui => 1 },
+    'wmf' => { ui => 1, optional => 1, cflags => 1 },
+    'xbm' => { ui => 1 },
+    'xpm' => { ui => 1, optional => 1 },
+    'xwd' => {  ui => 1 },
+    'zealouscrop' => {}
 );
